[package]
name = "memory_map"
version = "0.0.2"
authors = ["Dan Burkert <dan@danburkert.com>", "MaidSafe Developers <dev@maidsafe.net>"]
description = "Memory mapped files."
documentation = "http://maidsafe.net/memory_map/latest"
repository = "https://github.com/maidsafe/memory_map"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://maidsafe.net"

[dependencies]
kernel32-sys = "0.1.4"
libc = "*"
winapi = "*"

[dev-dependencies]
tempdir = "*"
